AArch64: "bad AD file" for LL enconding AryEq Node matching

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b107
    • aarch64
    • generic

      On AAarch64

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/matcher.cpp:1605
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/shihui/jdk9-hs-comp/hotspot/src/share/vm/opto/matcher.cpp:1605), pid=8501, tid=8746
      # assert(false) failed: bad AD file
      #

      1605 assert( false, "bad AD file" );
      (gdb) p ((AryEqNode*)n)->encoding()
      $1 = StrIntrinsicNode::LL
      (gdb)

      Only StrIntrinsicNode::UU AryEq is supported on aarch64 while StrIntrinsicNode::LL AryEq is not yet. Supposed fix is adding StrIntrinsicNode::LL AryEq support similar with X86 platform.

            Assignee:
            Hui Shi
            Reporter:
            Hui Shi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: