8149100: AArch64: "bad AD file" for LL enconding AryEq Node matching

Add byte array equal support for aarch64

Reviewed-by: aph